2007-05-09  Stefan Monnier  <monnier@iro.umontreal.ca>

	* textmodes/tex-mode.el (tex-font-lock-keywords-2): Add citet and citep
	to the list of citation commands.

2007-05-09  Stefan Monnier  <monnier@iro.umontreal.ca>

	* vc-hooks.el (vc-find-root): Stop searching when the user changes.

2007-05-09  Edward O'Connor  <hober0@gmail.com>  (tiny change)

	* progmodes/python.el (python-font-lock-keywords)
	(python-open-block-statement-p, python-mode): Add support for the new
	"with" keyword.

2007-05-08  Stefan Monnier  <monnier@iro.umontreal.ca>

	* diff-mode.el (diff-apply-hunk, diff-test-hunk): Don't do by default
	the exact opposite of diff-goto-source.

	* emacs-lisp/advice.el (ad-special-forms): Remove.
	(ad-special-form-p): Use subr-arity.

	* newcomment.el (comment-search-forward): Make sure we search forward.
	(comment-enter-backward): Try and distinguish the non-matching case at
	EOB from the non-matching case with a missing comment-end-skip for
	a 2-char comment ender.
	(comment-choose-indent): New function extracted from comment-indent.
	Improve the alignment algorithm.
	(comment-indent): Use it.

	* textmodes/sgml-mode.el (sgml-lexical-context): Add handling of
	XML style Processing Instructions.
	(sgml-parse-tag-backward): Handle XML-style PIs.  Also ensure progress.
	(sgml-calculate-indent): Handle `pi' context.

	* vc.el: Ensure that update-changelog issues an error when used with
	a backend that does not implement it.
	(vc-update-changelog-rcs2log): Rename from vc-default-update-changelog.
	Remove `backend' argument.  Use expand-file-name.
	(vc-cvs-update-changelog, vc-rcs-update-changelog): New aliases.

	* progmodes/python.el (python-end-of-block): Revert last change.
	(python-end-of-statement): Make sure we move *forward*.

2007-05-08  Richard Stallman  <rms@gnu.org>

	* mail/mailabbrev.el (sendmail-pre-abbrev-expand-hook):
	Don't include non-self-insert commands in the exception for `-'.

2007-05-08  David Reitter  <david.reitter@gmail.com>
